--- a/app/views/forem/posts/_post.html.erb
+++ b/app/views/forem/posts/_post.html.erb
@@ -34,6 +34,16 @@
         </a>
         <%= forem_format(post.text) %>
 
+        <div class="photos">
+          <% for photo in post.photos %>
+            <% if photo.attachment_is_animated %>
+              <%= video_tag photo.attachment_url(:medium) %>
+            <% else %>
+              <%= image_tag photo.attachment_url(:medium) %>
+            <% end %>
+          <% end %>
+        </div>
+
         <% if post.reply_to %>
           <div class='in-reply-to'>
             <%= link_to "#{t("forem.post.in_reply_to")} #{post.reply_to.user.forem_name}", "#post-#{post.reply_to.id}" %>
