Try 2 - Delayed Paperclip with ajax updating

--- a/app/views/forem/posts/_post.html.erb
+++ b/app/views/forem/posts/_post.html.erb
@@ -41,6 +41,11 @@
     <% if photo.attachment_is_animated %>
       <% if photo.attachment_is_processing %>
         <p class="processing">Please wait while we process your video...</p>
+
+        <script>
+          $.mediaPoller.request(photo.id);
+          // or pass in the photo id somehow
+        </script>
       <% else %>
         <%= video_tag photo.attachment_url(:medium) %>
       <% end %>
