--- a/app/views/forem/forums/index.html.erb
+++ b/app/views/forem/forums/index.html.erb
@@ -1,3 +1,13 @@
+
+      <div style="background: grey; padding: 10px; margin: 10px;">
+        <h3>1. Run `bin/delayed_job start`</h3>
+        <h3>2. Log in as admin</h3>
+        <p>Username: `admin@example.com`<br>Password: `admin1234`</p>
+        <h3>3. Go to forum `Default` and click `New topic`</h3>
+        <h3>4. Post an animated GIF</h3>
+        <img src="https://i.chzbgr.com/maxW500/8471807232/h7502A30B/">
+      </div>
+
 <div id='forums_container'>
   <h1 id='forums_title'><%= t('.title') %></h1>
 
